Fix canvas width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 #canvas {
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    max-width: 400px;
+    max-height: 300px;
 }
 
 body {
     background-color: #09152b;
     padding: 0;
+    margin-right: 10px;
     max-width: 600px;
     font-size: 14px;
     hyphens: auto;
